# CPP-Agentic-Framework

./: CMakeLists.txt  README.md
AsyncBatchFlow/: AsyncBatchFlow.cpp  AsyncBatchFlow.h
AsyncBatchNode/: AsyncBatchNode.cpp  AsyncBatchNode.h
AsyncFlow/: AsyncFlow.cpp  AsyncFlow.h
AsyncNode/: AsyncNode.cpp  AsyncNode.h
AsyncParallelBatchNode/: AsyncParallelBatchNode.cpp  AsyncParallelBatchNode.h
BaseNode/: BaseNode.cpp  BaseNode.h  ConditionalTransition.cpp  ConditionalTransition.h
BatchFlow/: BatchFlow.cpp  BatchFlow.h
BatchNode/: BatchNode.cpp  BatchNode.h
Flow/: Flow.cpp  Flow.h
Node/: Node.cpp  Node.h
